Namespace filter for service discover - fix checkstyle (issue #1000).